--- a/translator.ipynb
+++ b/translator.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9e036f84",
    "metadata": {},
    "outputs": [
@@ -34,10 +34,10 @@
    ],
    "source": [
     "# Load the English-Russian parallel text data\n",
-    "with open('en-ru.txt/Tatoeba.en-ru.en', 'r', encoding='utf-8') as f:\n",
+    "with open('data/Tatoeba.en-ru.en', 'r', encoding='utf-8') as f:\n",
     "    en_texts = f.read().strip().split('\\n')\n",
     "\n",
-    "with open('en-ru.txt/Tatoeba.en-ru.ru', 'r', encoding='utf-8') as f:\n",
+    "with open('data/Tatoeba.en-ru.ru', 'r', encoding='utf-8') as f:\n",
     "    ru_texts = f.read().strip().split('\\n')\n",
     "\n",
     "print(f\"Loaded {len(en_texts)} English sentences\")\n",
