add warnings filter

--- a/decoder-only.ipynb
+++ b/decoder-only.ipynb
@@ -8,6 +8,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "with open('input.txt', 'r', encoding='utf-8') as f:\n",
     "    text = f.read()"
