--- a/translator.ipynb
+++ b/translator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "a138f071",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import numpy as np"
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9e036f84",
    "metadata": {},
    "outputs": [
@@ -23,12 +24,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 540674 English sentences\n",
-      "Loaded 540674 Russian sentences\n",
+      "Loaded 97568 English sentences\n",
+      "Loaded 97568 Russian sentences\n",
       "\n",
       "Example pair:\n",
-      "EN: For once in my life I'm doing a good deed... And it is useless. \n",
-      "RU: Один раз в жизни я делаю хорошее дело... И оно бесполезно. \n"
+      "EN: For once in my life I'm doing a good deed... And it is useless.\n",
+      "RU: Один раз в жизни я делаю хорошее дело... И оно бесполезно.\n"
      ]
     }
    ],
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "581a19ff",
    "metadata": {},
    "outputs": [
@@ -57,8 +58,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "English vocab size: 223\n",
-      "Russian vocab size: 231\n"
+      "English vocab size: 157\n",
+      "Russian vocab size: 192\n"
      ]
     }
    ],
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f33a0531",
    "metadata": {},
    "outputs": [
@@ -134,9 +135,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prepared 538850 pairs (filtered by max length)\n",
-      "Train pairs: 484965\n",
-      "Val pairs: 53885\n"
+      "Prepared 97005 pairs (filtered by max length)\n",
+      "Train pairs: 87304\n",
+      "Val pairs: 9701\n"
      ]
     }
    ],
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "206516a1",
    "metadata": {},
    "outputs": [],
@@ -201,17 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ede872b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model import InputEmbedding, DecoderBlock, CrossMultiHead, EncoderBlock\n"
+    "from model import InputEmbedding, DecoderBlock, CrossMultiHead, EncoderBlock"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8903362a",
    "metadata": {},
    "outputs": [],
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3829b7ef",
    "metadata": {},
    "outputs": [],
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "619714d9",
    "metadata": {},
    "outputs": [
@@ -289,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total parameters: 14,968,807\n"
+      "Total parameters: 14,931,904\n"
      ]
     }
    ],
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6c58f36f",
    "metadata": {},
    "outputs": [],
@@ -381,96 +382,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step:     0  train loss: 5.6714  val loss: 4.4644\n",
-      "step:   200  train loss: 2.0392  val loss: 2.0664\n",
-      "step:   400  train loss: 1.7420  val loss: 1.8793\n",
-      "step:   600  train loss: 1.5836  val loss: 1.5922\n",
-      "step:   800  train loss: 1.3906  val loss: 1.4513\n",
-      "step:  1000  train loss: 1.3544  val loss: 1.3768\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_1000.pt\n",
-      "step:  1200  train loss: 1.2802  val loss: 1.3216\n",
-      "step:  1400  train loss: 1.3317  val loss: 1.2123\n",
-      "step:  1600  train loss: 1.1548  val loss: 1.1505\n",
-      "step:  1800  train loss: 1.0824  val loss: 1.2346\n",
-      "step:  2000  train loss: 1.0821  val loss: 1.2251\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_2000.pt\n",
-      "step:  2200  train loss: 1.1241  val loss: 1.1878\n",
-      "step:  2400  train loss: 1.1403  val loss: 1.0965\n",
-      "step:  2600  train loss: 1.1245  val loss: 1.0006\n",
-      "step:  2800  train loss: 1.0171  val loss: 1.1429\n",
-      "step:  3000  train loss: 0.8734  val loss: 1.1200\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_3000.pt\n",
-      "step:  3200  train loss: 0.9823  val loss: 1.0413\n",
-      "step:  3400  train loss: 0.9049  val loss: 1.0507\n",
-      "step:  3600  train loss: 1.0422  val loss: 0.9161\n",
-      "step:  3800  train loss: 0.9014  val loss: 0.9486\n",
-      "step:  4000  train loss: 0.7886  val loss: 0.8991\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_4000.pt\n",
-      "step:  4200  train loss: 0.7973  val loss: 1.0249\n",
-      "step:  4400  train loss: 0.8127  val loss: 0.8475\n",
-      "step:  4600  train loss: 0.8397  val loss: 0.8370\n",
-      "step:  4800  train loss: 0.7648  val loss: 0.9286\n",
-      "step:  5000  train loss: 0.9362  val loss: 0.8575\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_5000.pt\n",
-      "step:  5200  train loss: 0.8042  val loss: 0.9113\n",
-      "step:  5400  train loss: 0.7966  val loss: 0.8271\n",
-      "step:  5600  train loss: 0.8797  val loss: 0.9029\n",
-      "step:  5800  train loss: 0.6562  val loss: 0.7984\n",
-      "step:  6000  train loss: 0.6907  val loss: 0.7665\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_6000.pt\n",
-      "step:  6200  train loss: 0.7997  val loss: 0.7561\n",
-      "step:  6400  train loss: 0.8265  val loss: 0.7618\n",
-      "step:  6600  train loss: 0.7812  val loss: 0.7778\n",
-      "step:  6800  train loss: 0.6359  val loss: 0.9108\n",
-      "step:  7000  train loss: 0.7319  val loss: 0.8290\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_7000.pt\n",
-      "step:  7200  train loss: 0.7063  val loss: 0.6431\n",
-      "step:  7400  train loss: 0.6366  val loss: 0.7478\n",
-      "step:  7600  train loss: 0.6874  val loss: 0.7143\n",
-      "step:  7800  train loss: 0.6297  val loss: 0.7104\n",
-      "step:  8000  train loss: 0.6858  val loss: 0.6505\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_8000.pt\n",
-      "step:  8200  train loss: 0.6870  val loss: 0.7865\n",
-      "step:  8400  train loss: 0.6780  val loss: 0.7787\n",
-      "step:  8600  train loss: 0.5335  val loss: 0.7024\n",
-      "step:  8800  train loss: 0.5913  val loss: 0.7098\n",
-      "step:  9000  train loss: 0.6520  val loss: 0.6936\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_9000.pt\n",
-      "step:  9200  train loss: 0.5684  val loss: 0.5468\n",
-      "step:  9400  train loss: 0.6473  val loss: 0.7760\n",
-      "step:  9600  train loss: 0.5828  val loss: 0.7257\n",
-      "step:  9800  train loss: 0.5692  val loss: 0.6437\n",
-      "step: 10000  train loss: 0.5673  val loss: 0.8262\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_10000.pt\n",
-      "step: 10200  train loss: 0.5638  val loss: 0.7097\n",
-      "step: 10400  train loss: 0.6049  val loss: 0.7307\n",
-      "step: 10600  train loss: 0.5068  val loss: 0.6959\n",
-      "step: 10800  train loss: 0.6108  val loss: 0.5262\n",
-      "step: 11000  train loss: 0.6036  val loss: 0.6997\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_11000.pt\n",
-      "step: 11200  train loss: 0.6332  val loss: 0.5585\n",
-      "step: 11400  train loss: 0.4955  val loss: 0.6650\n",
-      "step: 11600  train loss: 0.4975  val loss: 0.6180\n",
-      "step: 11800  train loss: 0.5058  val loss: 0.6143\n",
-      "step: 12000  train loss: 0.4205  val loss: 0.5647\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_12000.pt\n",
-      "step: 12200  train loss: 0.4687  val loss: 0.5400\n",
-      "step: 12400  train loss: 0.4524  val loss: 0.5891\n",
-      "step: 12600  train loss: 0.4669  val loss: 0.6011\n",
-      "step: 12800  train loss: 0.4717  val loss: 0.4699\n",
-      "step: 13000  train loss: 0.4408  val loss: 0.4601\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_13000.pt\n",
-      "step: 13200  train loss: 0.5443  val loss: 0.6570\n",
-      "step: 13400  train loss: 0.4130  val loss: 0.6730\n",
-      "step: 13600  train loss: 0.4954  val loss: 0.5978\n",
-      "step: 13800  train loss: 0.6344  val loss: 0.5470\n",
-      "step: 14000  train loss: 0.3629  val loss: 0.5500\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_14000.pt\n",
-      "step: 14200  train loss: 0.4361  val loss: 0.4777\n",
-      "step: 14400  train loss: 0.4101  val loss: 0.5883\n",
-      "step: 14600  train loss: 0.4567  val loss: 0.5820\n",
-      "step: 14800  train loss: 0.4501  val loss: 0.5104\n",
-      "Checkpoint saved: checkpoints/checkpoint_step_15000.pt\n",
+      "step:     0  train loss: 5.3553  val loss: 4.2959\n",
+      "Checkpoint saved: checkpoints/checkpoint_step_100.pt\n",
       "\n",
       "Training complete!\n"
      ]
@@ -524,25 +437,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a1e641fe",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_5976/606622569.py:38: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  checkpoint = torch.load(checkpoint_path, map_location=device)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Checkpoint loaded from: checkpoints/checkpoint_latest.pt\n",
-      "Resuming from step: 15000\n",
-      "Train loss: 0.3937, Val loss: 0.4854\n"
+      "Resuming from step: 100\n",
+      "Train loss: 2.4796, Val loss: 2.4786\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_11284/3074988078.py:36: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  checkpoint = torch.load(checkpoint_path, map_location=device)\n"
      ]
     }
    ],
@@ -553,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "22a19d55",
    "metadata": {},
    "outputs": [
@@ -564,19 +477,19 @@
       "Translation Examples:\n",
       "\n",
       "EN: Hello, how are you?\n",
-      "RU: Здрово, вы возьми, как ты? \n",
+      "RU: Каш я.\n",
       "\n",
       "EN: I love learning languages.\n",
-      "RU: Я люблю изучать языки. \n",
+      "RU: Я нидне уловене ол утишерогоровок тые вем, каим?\n",
       "\n",
       "EN: Today is a beautiful day.\n",
-      "RU: Сегодня только красивый день. \n",
+      "RU: Не помолякряконе овсверороселе денах родах ралинёпосве малокатси.\n",
       "\n",
       "EN: Let's try something.\n",
-      "RU: Давай попробуем что-то остарость. \n",
+      "RU: Давалче повт Я працила бутшокаточеместакега по.\n",
       "\n",
       "EN: I will be back soon.\n",
-      "RU: Я скоро вернусь. \n",
+      "RU: Мы МЯ коефрибы низаналавини вовим вть ка ченый пукущерери мы н прололь окавобу.\n",
       "\n"
      ]
     }
@@ -630,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "970cc78c",
    "metadata": {},
    "outputs": [
@@ -640,25 +553,25 @@
      "text": [
       "Validation Examples with Ground Truth:\n",
       "\n",
-      "EN:        I'm just about to change that. \n",
-      "RU (true): Я как раз собираюсь это изменить. \n",
-      "RU (pred): Я просто просто измениться в этом меняти. \n",
+      "EN:        What are you doing with your life?\n",
+      "RU (true): Что ты делаешь со своей жизнью?\n",
+      "RU (pred): Ты де побу пигорашисть денела буду.\n",
       "\n",
-      "EN:        The project was never completed. \n",
-      "RU (true): Проект так и не был завершён. \n",
-      "RU (pred): Проект никогда не было никогда не полностью. \n",
+      "EN:        He can nourish his elephant, but cannot nourish his child.\n",
+      "RU (true): Он может прокормить своего слона, но не может прокормить своего ребёнка.\n",
+      "RU (pred): Он тобы почто нано пови роретего прамоераня ти этибенестодна полваюе х повизанови вать пологоголих вавлой в якащетинемо порнось \n",
       "\n",
-      "EN:        Tom didn't want to stand out. \n",
-      "RU (true): Том не хотел выделяться. \n",
-      "RU (pred): Том не хотел выходить из улицы. \n",
+      "EN:        I'm late a little.\n",
+      "RU (true): Я немного опоздал.\n",
+      "RU (pred): Я здаль точто до полеродитито побом водедемистсто столоваридашь понако пренеленом вемане да поди в детов.\n",
       "\n",
-      "EN:        Tom did not want to stand out. \n",
-      "RU (true): Том не хотел выделяться. \n",
-      "RU (pred): Том не хотел выходить и не выходить. \n",
+      "EN:        Do not step on a dog's tail.\n",
+      "RU (true): Не наступайте собаке на хвост.\n",
+      "RU (pred): В не мобы, к нанего поре то ночтобы нее туза, стьдеть покиздо да сята вама помотерех ть по ни в честомна.\n",
       "\n",
-      "EN:        The first step is realizing that you have a problem. \n",
-      "RU (true): Первый шаг заключается в том, чтобы понять, что у вас есть проблема. \n",
-      "RU (pred): Первый полезна проколизиться тебе, что у тебя проблема. \n",
+      "EN:        He who is bitten by a snake fears even the rope.\n",
+      "RU (true): Обжёгшись на молоке, на воду дуют.\n",
+      "RU (pred): Это сого веробы столови лра продематрака в ралецатьченограниза ко не покастобе ве пов недо фресенином в ко притстримало какитено\n",
       "\n"
      ]
     }
@@ -681,7 +594,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
